line_det/logs/lane_states/build.make.001.log.stderr
/home/eduardo/Robotica/AutoNOMOS2/line_det/src/lane_states/lane_states_node.cpp: In function ‘std_msgs::Float32MultiArray sense(std_msgs::Float32MultiArray)’:
/home/eduardo/Robotica/AutoNOMOS2/line_det/src/lane_states/lane_states_node.cpp:112:13: error: ‘c0’ was not declared in this scope
    q = conv(c0, prob); ROS_INFO_STREAM("sense: " << 0);
             ^
/home/eduardo/Robotica/AutoNOMOS2/line_det/src/lane_states/lane_states_node.cpp:115:13: error: ‘c1’ was not declared in this scope
    q = conv(c1, prob); ROS_INFO_STREAM("sense: " << 1);
             ^
/home/eduardo/Robotica/AutoNOMOS2/line_det/src/lane_states/lane_states_node.cpp:118:13: error: ‘c2’ was not declared in this scope
    q = conv(c2, prob); ROS_INFO_STREAM("sense: " << 2);
             ^
/home/eduardo/Robotica/AutoNOMOS2/line_det/src/lane_states/lane_states_node.cpp:121:13: error: ‘c3’ was not declared in this scope
    q = conv(c3, prob); ROS_INFO_STREAM("sense: " << 3);
             ^
/home/eduardo/Robotica/AutoNOMOS2/line_det/src/lane_states/lane_states_node.cpp:124:13: error: ‘c4’ was not declared in this scope
    q = conv(c4, prob); ROS_INFO_STREAM("sense: " << 4);
             ^
/home/eduardo/Robotica/AutoNOMOS2/line_det/src/lane_states/lane_states_node.cpp:127:13: error: ‘c5’ was not declared in this scope
    q = conv(c5, prob); ROS_INFO_STREAM("sense: " << 5);
             ^
/home/eduardo/Robotica/AutoNOMOS2/line_det/src/lane_states/lane_states_node.cpp:130:13: error: ‘c6’ was not declared in this scope
    q = conv(c6, prob); ROS_INFO_STREAM("sense: " << 6);
             ^
/home/eduardo/Robotica/AutoNOMOS2/line_det/src/lane_states/lane_states_node.cpp:133:13: error: ‘c7’ was not declared in this scope
    q = conv(c7, prob); ROS_INFO_STREAM("sense: " << 7);
             ^
make[2]: *** [CMakeFiles/lane_states_node.dir/lane_states_node.cpp.o] Error 1
make[1]: *** [CMakeFiles/lane_states_node.dir/all] Error 2
make: *** [all] Error 2
